Before shifting back to master to finish up the bug with the www not showing up properly

--- a/app/assets/stylesheets/dashboard/style.css.scss
+++ b/app/assets/stylesheets/dashboard/style.css.scss
@@ -8063,6 +8063,11 @@ ul.my-friends li .profile-pic{
   text-align: center;
   display:table-cell !important;
   vertical-align:middle;
-
-
 }
+
+/* INITIAL PAGE LOAD PAGE STYLES -- START*/
+.step-icon i
+{
+  color: #0090d9;
+}
+/* INITIAL PAGE LOAD PAGE STYLES -- END*/
